--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Build with Next.js
         env:
           # Set the base path to the GitHub Pages URL
-          NEXT_PUBLIC_BASE_PATH: "/${{ github.repository }}"
+          NEXT_PUBLIC_BASE_PATH: /colour-sea
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
